--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 8px;
 
   min-width: 240px;
   max-width: 500px;
-  margin-bottom: 28px;
   padding: 16px 20px;
 
   border: 1px solid #020202;
@@ -22,8 +22,4 @@
 
 .field {
   margin-bottom: 4px;
-}
-
-.warning {
-  color: #db0000;
 }
