--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #303030;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --elements-background-color: #4c4c4c;
 }
 
 a {
@@ -36,14 +38,26 @@ body {
   height: 100vh;
 }
 
+.container {
+  padding: 28px;
+}
+
 ul {
+  margin: 0;
   padding: 0;
+  list-style: none;
+  display: flex;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  margin: 8px;
+  margin: 16px 8px;
+}
+
+p {
+  letter-spacing: 0.01em;
+  margin: 0;
 }
 
 button {
